# ato-assistant

./: .env.example  .gitignore  CLAUDE.md  CONTENT_PLAN.md  PLAN.md  Procfile  SESSION_LOG.md  SETUP.md  WEEK_1.md  WEEK_2.md  WEEK_3.md  WEEK_4.md  main.py  pyproject.toml
apps/api/: main.py  pyproject.toml
apps/api/migrations/: 001_add_hybrid_search.sql  002_add_feedback.sql
apps/api/prompts/: out_of_scope.md  refusal.md  system.md
apps/api/routes/: chat.py  feedback.py
apps/web/: package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/api/chat/: route.ts
apps/web/app/api/feedback/: route.ts
apps/web/app/chat/: page.tsx
apps/web/components/: chat-ui.tsx
apps/web/components/chat/: AssistantRow.tsx  DisclaimerBanner.tsx  EmptyState.tsx  InputBar.tsx  JudgePanel.tsx  MessageList.tsx  Sidebar.tsx  UserRow.tsx  index.ts
docs/superpowers/plans/: 2026-05-21-chat-ui-redesign.md  2026-05-27-day13-14-plan.md
docs/superpowers/specs/: 2026-05-21-chat-ui-redesign.md  2026-05-26-corpus-expansion-mobile.md  2026-05-26-router-judge-design.md  2026-05-27-day13-14-design.md
